fix: 메인 페이지 overflow-x hidden 처리

--- a/src/pages/main/index.scss
+++ b/src/pages/main/index.scss
@@ -4,4 +4,5 @@
     background: #fefefe;
     padding: 0 !important;
     max-width: 100% !important;
+    overflow-x: hidden !important;
 }
